\name{NEWS}
\title{NEWS file for the stm package}
\section{Version 1.3.6}{
\itemize{
\item Another very small release to address a concern with file download speeds.
}
}
\section{Version 1.3.5}{
\itemize{
\item A small release to correct the class() issue in preparation for R 4.0.0.  Thanks to the R core team for clear directions.
}
}
\section{Version 1.3.4}{
  \itemize{
\item A small release to coincide with JSS vignette being posted.  Larger release to come soon hopefully.
\item Hat tip to Wouter van Atteveldt for a pull request that fixed a problem in summary.estimateEffect
\item Thanks to Brooks Ambrose for a great catch in the spectral algorithm that should increase memory efficiency and speed during initialization for large vocabulary models.
\item Thanks to Elena Savelyeva for improvements to the toLDAVis function.
\item Added a function that allows for custom punctuation removal in textProcessor and also a flag which allows access to the broader array of unicode punctuation (ucp=TRUE).
    }
}
\section{Version 1.3.3}{
\itemize{
\item Multiple improvements from Yuval Dugan.  Allow topics to be scaled by vertex size in plot.topicCorr.  toLDAvis now allows renumbering of topics.
\item Numerous documentation updates.
\item In order to facilitate interoperability, more functions can now take quanteda and Matrix objects.  Thanks to Julia Silge for the suggestion!
}
}
\section{Version 1.3.1}{
\itemize{
\item Fixing a problem with ngroups and adding a test to detect such problems in the future. Thanks to Igor Elbert for finding this. 
\item Fixing a bug in K=0 where the method could fail if the perplexity was too large. It now automatically tries to reset itself.  To help with this in the future the initial dimension and perplexity values can now be set through the control options in stm.  Thanks to Mario Santoro for the bug catch and excellent replication file.